Expand GLM crash course

--- a/10-glm.Rmd
+++ b/10-glm.Rmd
@@ -11,13 +11,17 @@ We are going to simulate our own data for this exercise. The following will be c
 
 ```{r}
 library(ggplot2)
+library(dplyr)
 set.seed(111)
 N <- 200
 x <- runif(N, -1, 1)
 a <- 0.5
 b <- 1.3
-d <- data.frame(x = x)
+d <- data_frame(x = x)
+d
 ```
+
+So our data frame includes a column for one predictor, `x`. This can represent any variable that you might try and predict some other process with. 
 
 We will use the following function to quickly plot the predictions from our models. 
 
@@ -36,18 +40,62 @@ plot_glm <- function(model, dat) {
 }
 ```
 
+Remember that there are two components to a GLM: a link function that describes what is happening with the mean of the data, and an error distribution that describes the variability around the mean. 
+
+Put another way, the "link" is the transformation you need to apply to make your data linear with respect to the predictors.
+
+The error distribution describes the spread of the data around the raw untransformed mean.
+
+The two most common link functions, and there only two we are going to work with in this workshop, are the log and logit links.
+
+Let's look at those now. So if we want to fit a curve that looks like this:
+
+```{r}
+xx <- seq(0, 5, length.out = 200)
+plot(xx, exp(xx), type = "l")
+```
+
+A log link will make the data look linear:
+
+```{r}
+plot(xx, log(exp(xx)), type = "l")
+```
+
+And if this is the curve we ultimately want to fit:
+
+```{r}
+xx <- seq(-5, 5, length.out = 200)
+plot(xx, plogis(xx), type = "l")
+```
+
+Then we can make it linear by applying the logit link:
+
+```{r}
+plot(xx, qlogis(plogis(xx)), type = "l")
+```
+
+Note that of the `qlogis()` function is also known as the logit function and the `plogis()` function is also known as the inverse logit function. The logit of p is simply: logit(p) = log(p/(1-p)).
+
+There are many ways you can specify a distribution family and link function in R. I'm going to try and stay consistent and specify them like this `family(link = "link")`.
+
+When in doubt, read the help for `?family`.
+
 # Common GLMs
 
 ## Gamma, log link
 
 The Gamma distribution combined with a log link is commonly used to model continuous positive data. (Therefore, this can often be used interchangeably with a linear regression where the response data are log transformed.)
 
+Here, and throughout, we will generate a true set of response data `y_true`. We will then add variability around the true values according to each distribution that we work with. 
+
 ```{r}
 y_true <- exp(a + b * x)
 shape <- 8
 y <- rgamma(N, rate = shape / y_true, shape = shape)
-plot(x, y)
+plot(x, y);lines(sort(x), y_true[order(x)])
 ```
+
+What are some examples of data sets that might resemble this?
 
 Let's fit a GLM that reflects these data.
 
@@ -64,8 +112,10 @@ The poisson distribution with a log link is commonly used to model count data or
 ```{r}
 y_true <- exp(a + b * x)
 y <- rpois(N, lambda = y_true)
-plot(x, y)
+plot(x, y);lines(sort(x), y_true[order(x)])
 ```
+
+What are some examples of data sets that might resemble this?
 
 ```{r}
 (m_poisson <- glm(y ~ x, family = 
@@ -75,15 +125,17 @@ plot_glm(m_gamma, d)
 
 ## Negative binomial, log link
 
-The negative binomial distribution with a log link can also model count data but allows the variance to grow as an estimated quadratic function of the mean. In real data sets, it's probably more common to see the negative binomial than the poisson.
+The negative binomial distribution with a log link can also model count data but allows the variance to grow as a quadratic function of the mean. In real data sets, it's probably more common to see the negative binomial than the poisson.
 
 ```{r}
 y_true <- exp(a + b * x)
 y <- MASS::rnegbin(N, mu = y_true, theta = 0.6)
-plot(x, y)
+plot(x, y);lines(sort(x), y_true[order(x)])
 ```
 
 Notice the much larger values on the right side of the graph.
+
+(Also note that there is another common parameterization of the negative binomial which allows the variance to grow linearly with the mean.)
 
 We have to use a special function to fit the negative binomial GLM in R:
 
@@ -98,22 +150,37 @@ We can use a binomial response and logit link if we have response data represent
 
 ```{r}
 y_linear <- a + b * x
-prob_true <- 1/(1+exp(-y_linear)) # logistic function
+# prob_true <- 1/(1+exp(-y_linear)) # inverse logit
+prob_true <- plogis(y_linear) # inverse logit
 y <- rbinom(N, 1, prob_true)
-plot(x, jitter(y, 0.1))
+plot(x, jitter(y, 0.1));lines(sort(x), prob_true[order(x)])
 ```
+
+What does the true probabilities line indicate in the above plot and how does it correspond to the dots?
+
+In what scenario might you see this kind of data? 
 
 ```{r}
 (m_bin <- glm(y ~ x, family = 
     binomial(link = "logit"))) # exercise
 g <- plot_glm(m_bin, d)
+coef(m_bin)
+(slope <- round(coef(m_bin)[[2]], 3)) # slope
+(int <- round(coef(m_bin)[[1]], 3)) # intercept
 ```
 
-How do we interpret the slope coefficient?
+How do we interpret the slope coefficient? A unit increase in `x` corresponds to a `r slope` increase in the log odds of a `1` being observed.
 
-A unit increase in `x` corresponds to a `r round(coef(m_bin)[[2]], 1)` increase in the log odds of a `1` being observed.
+That means the inverse-logit transformed true probabilities follow our estimated intercept and slope.
 
-What does that mean? If we exponentiate the slope coefficient we get the expected fold increase in the *odds* of observing a `1`: `r round(exp(coef(m_bin)[[2]]), 2)` per unit increase in `x`.
+```{r}
+plot(sort(x), prob_true[order(x)]) # true probabilities 
+# inverse-logit transformed probabilities (aka log odds)
+plot(sort(x), qlogis(prob_true[order(x)]), ylab = "log odds")
+abline(a = int, b = slope, col = "red")
+```
+
+What does that mean? If we exponentiate the slope coefficient we get the expected fold increase in the *odds* of observing a `1`: `r exp(slope)` per unit increase in `x`.
 
 Of course, most people have trouble wrapping their heads around odds and log odds, but those are the only scales on which our slope is constant.
 
@@ -124,18 +191,22 @@ A quick trick is to take the slope of the logistic regression and divide it by 4
 Here's a quick illustration of that:
 
 ```{r}
-approximate_slope <- coef(m_bin)[[2]]/4
-intercept <- plogis(coef(m_bin)[[1]])
+(approximate_slope <- slope/4)
+intercept <- plogis(int)
 
 g + geom_vline(xintercept = c(-0.5, 0, 0.5), lty = 2) +
   geom_abline(intercept = intercept, 
-    slope = approximate_slope) +
+    slope = approximate_slope, size = 1) +
   ylab("Probability of y = 1")
 ```
 
 For more details see: Gelman, A., and J. Hill. 2006. Data Analysis Using Regression and Multilevel/Hierarchical Models. Cambridge University Press, Cambridge, UK.
 
 # Overdispersion
+
+“Overdispersion is the polite statistician’s version of Murphy’s Law: if something can go wrong, it will”
+
+Crawley (2007, p. 522)
 
 So far, all our fitted models have matched the simulated data. One common thing that can go wrong is that there is more variability in the data than allowed by a distribution. 
 
@@ -167,6 +238,8 @@ If we look at the deviance residuals, these should be constant with the predicte
 plot(fitted(m_poisson_nb), residuals(m_poisson_nb, type = "deviance"))
 ```
 
+TODO TESTING
+
 But they aren't.
 
 We can compare these to what we would have expected when the model was correctly specified. 
@@ -178,6 +251,8 @@ plot(fitted(m_poisson), residuals(m_poisson, type = "deviance"))
 
 Note that this does not look the same as the residuals on the "response" scale.
 
+TODO FIX THIS UP
+
 ```{r}
 plot(fitted(m_nb), residuals(m_nb, type = "response"))
 plot(fitted(m_nb), residuals(m_nb, type = "pearson"))
@@ -188,10 +263,11 @@ What are we looking at here?
 
 We can also look at whether the deviance is approximately equal to the residual degrees of freedom.
 
+TODO DEFINE DEVIANCe
+
 ```{r}
 deviance(m_poisson_nb)/m_poisson_nb$df.residual
-# AER::dispersiontest(m_poisson_nb) # Cameron, A.C. & Trivedi, P.K. (1990). Regression-based tests for overdispersion in the Poisson model. Journal of Econometrics, 46, 347–364.
-
+AER::dispersiontest(m_poisson_nb) # Cameron, A.C. & Trivedi, P.K. (1990). Regression-based tests for overdispersion in the Poisson model. Journal of Econometrics, 46, 347–364.
 ```
 
 We know the correct model to fit here would be the negative binomial. But in reality we would not know this. An alternative, and simpler model to fit, is one with a "quasipoisson" error distribution.
@@ -200,13 +276,13 @@ This simply estimates how overdispersed the data are and scales the standard err
 
 ```{r}
 (m_qp <- glm(y ~ x, family = quasipoisson(link = "log")))
-summary(m_qp)
+confint(m_qp)
 confint(m_poisson_nb)
 ```
 
 # Quasibinomial, logit link
 
-We can end up with overdispersed data from a binomial distribution if we have repeated trials. 
+We can end up with overdispersed data from a binomial distribution if we have repeated trials.
 
 When might that happen? For example, maybe you are measuring the proportion of frogs that survive in a given tank.
 
