--- a/11-binomial-glmm.Rmd
+++ b/11-binomial-glmm.Rmd
@@ -2,27 +2,36 @@
 
 Goals:
 
-- Become familiar with building, checking, and plotting a binomial GLMM
+- Gain familiarity with building, checking, and plotting a binomial GLMM
+- Learn about binned residual plots for checking binomial models
 
-Let's read in and wrangle the data from O'Regan et al. 2013.
+# Loading the data
 
-```{r}
+We are going to work with a data set from O'Regan et al. 2013. The data
+represent time to metamorphosis for 3 amphibian species in a mesocosm
+experiment. The experiment had 2 levels of warming (normal and accelerated) and
+to levels of pond drying (normal/permanent and accelerated/temporary). There
+were multiple tanks per treatment condition.
+
+Let's read in and wrangle the data from O'Regan et al. 2013:
+
+```{r, message=FALSE}
 library(tidyverse)
-d <- read_csv("data/raw/oregan-etal-2013/meso.csv")
-d$date <- lubridate::mdy(d$date)
-d <- filter(d, !tank %in% c(23, 30, 35)) # simplify
+dt <- read_csv("data/raw/oregan-etal-2013/meso.csv")
+dt$date <- lubridate::mdy(dt$date)
+dt <- filter(dt, !tank %in% c(23, 30, 35)) # simplify
 
-max_time <- max(d$time)
+max_time <- max(dt$time)
 dat <- list()
-for (i in seq_len(nrow(d))) {
-  ti <- d[i,]$time
+for (i in seq_len(nrow(dt))) {
+  ti <- dt[i,]$time
   dat[[i]] <- data.frame(day = seq(1, max_time), 
     meta = c(rep(0, ti-1), rep(1, max_time - ti + 1)),
-    frog = i, tank = d[i,"tank"], warming = d[i,"climate"], 
-    drying = d[i,"drying"], species = d[i,"species"])
+    frog = i, tank = dt[i,"tank"], warming = dt[i,"climate"], 
+    drying = dt[i,"drying"], species = dt[i,"species"])
 }
 dat <- bind_rows(dat)
-d <- filter(dat, day %in% seq(0, max_time, 3)) # downsample 
+d <- filter(dat, day %in% unique(dt$time)) # downsample to the observed days 
 species_letters <- tibble(species = c("spadefoot", "treefrog", "redlegged"),
   sp = c("b", "c", "a"))
 d <- inner_join(d, species_letters) %>%
@@ -35,16 +44,44 @@ d <- inner_join(d, species_letters) %>%
 d <- mutate(d, day_centered = day - mean(day), week_centered = day_centered/7)
 ```
 
-A good first step is to fit a global model with no random effects and separate models for each potential random effect level. 
+# Plot the data 
+
+We are going to model the expected probability of a randomly chosen amphibian
+having reached metamorphosis at any given point in time and for each of the
+treatments.
+
+In other words, `meta` (1 = metamorphosis) will be our response, and the
+predictors will be `day`, `warming`, `drying`, and `species`. I've also
+included columns for `treatment` (warming and drying combination) and
+`species_true` to make plotting easier. 
+
+What are some useful ways we could look at the data before fitting a model? 
+
+Here is one way I thought of:
+
+```{r}
+ggplot(d, aes(day, meta, color = treatment)) +
+  facet_grid(treatment~species_true) +
+  geom_point(alpha = 0.05, position = position_jitter(height = 0.15)) +
+  ylab("Probability of metamorphosis")
+```
+
+# Fitting a global model and separate models 
+
+A good first step is to fit a global model with no random effects and separate
+models for each potential random effect level.
+
+We will use the convenience function `lme4::lmList` to fit the separate GLMs.
 
 ```{r}
 library(lme4)
 
 m_global <- glm(meta ~ week_centered + species + warming * drying, 
   family = binomial(link = "logit"), data = d)
-summary(m_global)
+arm::display(m_global)
 
-m_list <- lmList(meta ~ week_centered | tank, data = d, family = binomial(link = "logit"))
+m_list <- lmList(meta ~ week_centered | tank, data = d, 
+  family = binomial(link = "logit"))
 
 intercepts <- map_dbl(m_list, function(x) coef(x)[[1]])
 slopes <- map_dbl(m_list, function(x) coef(x)[[2]])
@@ -60,6 +97,8 @@ hist(slopes)
 Although we won't here, it would be a good idea to plot the model fits on
 top of the data for each tank. 
 
+# Fitting an initial GLMM
+
 Let's try fitting a binomial GLMM with a random intercept for each tank:
 
 ```{r}
@@ -74,25 +113,37 @@ summary(m, correlation = FALSE)
 VarCorr(m)
 ```
 
-Residual plots are not particularly useful for a binomial response:
+Default residual plots are not particularly useful for a binomial response,
+although adding a smooth function helps a little bit. 
 
 ```{r}
 plot(m, type = c("p", "smooth"))
 plot(m, type = c("p", "smooth"), ylim = c(-2, 2))
 ```
 
-Looking at the residuals by group is slightly more useful:
+Looking at the residuals by group can also be useful. What are we looking for
+here? 
 
 ```{r}
 plot(m, species~resid(.,type = "pearson"), xlim = c(-5, 5))
 plot(m, treatment~resid(.,type = "pearson"), xlim = c(-5, 5))
 ```
 
+# Binned residuals
+
+One useful way of checking residuals for a binomial response is by using
+a binned residual plot. Gelman and Hill (2007) cover this type of plot in their
+textbook on multilevel modeling. 
+
+The idea is to group the residuals into bins based on the predictor values. The
+trick is picking an appropriate number of bins for this to be useful. We can
+make all the same types of plots with these binned residuals. 
+
 ```{r}
 aug <- broom::augment(m)
 aug <- aug %>% mutate(week_binned = findInterval(week_centered, 
       seq(min(week_centered), max(week_centered), length.out = 25)))
-binned <- group_by(aug, species, week_binned) %>%
+binned <- group_by(aug, species, week_binned, tank) %>%
   summarise(mean_week_centered = mean(week_centered), mean_residual = mean(.resid),
     mean_fitted = mean(.fitted))
 
@@ -102,7 +153,9 @@ ggplot(binned, aes(mean_fitted, mean_residual, color = species)) +
   geom_smooth(se = FALSE, method = "loess", colour = "black")
 ```
 
-Not very good!
+This does not look great.
+
+# Plotting the random and fixed estimates
 
 We can use built-in functions to plot the random intercept estimates:
 
@@ -126,6 +179,8 @@ p <- sjPlot::sjp.glmer(m, type = "eff", show.ci = T)
 head(p$data)
 ```
 
+# Model comparison 
+
 And compare our model without a predictor, say species, via AIC or likelihood ratio test:
 
 ```{r}
@@ -144,27 +199,33 @@ bbmle::AICtab(m, m2)
 
 So the AIC is substantially lower letting the slope vary by species. 
 
+# Plotting the predictions 
+
 Let's try plotting the predictions for each frog in each tank:
 
 ```{r}
 new_data <- unique(select(d, day:week_centered, -frog))
 new_data$prediction <- predict(m2, type = "response", newdata = new_data)
-ggplot(new_data, aes(day, prediction, group = tank, color = species_true)) +
+ggplot(new_data, aes(day, prediction, group = tank, color = treatment)) +
   geom_line(alpha = 0.8) +
-  facet_wrap(~treatment) +
-  geom_point(aes(y = meta), alpha = 0.5, 
+  facet_wrap(~species_true) +
+  geom_point(aes(y = meta), alpha = 0.3, 
     position = position_jitter(height = 0.05)) +
   ylab("Probability of metamorphosis")
 ```
 
-We might want to consider letting some of these effects vary by tank. This model will not fit with lme4. Instead we will rely on TMB.
+# Expanding the model with glmmTMB
+
+We might want to consider letting some of these effects vary by tank. This
+model will not fit with lme4. Instead we will rely on TMB.
+
+If I was publishing this analysis I would want to be extra careful that the
+model had converged given that it failed with default settings in lme4. I might
+play with the control settings for lme4 or try fitting the model with glmmADMB
+or `MASS::glmmPQL`. 
 
 ```{r}
-# m3 <- glmer(meta ~ week_centered * species + warming * drying + 
-#   (1 + week_centered | tank), 
-#   family = binomial(link = "logit"), data = d)
-
-library("glmmTMB")
+library(glmmTMB)
 m3 <- glmmTMB(meta ~ week_centered * species + warming * drying + 
   (1 + week_centered | tank), 
   family = binomial(link = "logit"), data = d)
@@ -172,7 +233,17 @@ summary(m3)
 new_data$prediction3 <- predict(m3, type = "response", newdata = new_data)
 ```
 
-We would probably also want to consider if the effect of time varies by treatment:
+In fact, `MASS::glmmPQL` does give us similar inference:
+
+```{r, eval=FALSE}
+m_pql <- MASS::glmmPQL(meta ~ week_centered * species + warming * drying,
+  random = ~ 1 + week_centered | tank, 
+  family = binomial(link = "logit"), data = d)
+summary(m_pql)
+```
+
+We would probably also want to consider if the effect of time varies by
+treatment:
 
 ```{r}
 m4 <- glmmTMB(meta ~ (week_centered + species + warming + drying)^2 + 
@@ -182,45 +253,41 @@ summary(m4)
 bbmle::AICtab(m3, m4)
 ```
 
-Indeed the data support including both of these interactions with time and this would likely be an important scientific question from the experiment. 
+Indeed the data support including both of these interactions with time and
+given this was part of the experiment it is likely a scientific question we
+would want to explore.
 
 Let's plot these final probability of metamorphosis curves:
 
 ```{r}
 new_data$prediction4 <- predict(m4, type = "response", newdata = new_data)
-ggplot(new_data, aes(day, prediction4, group = tank, color = species_true)) +
-  geom_line(alpha = 0.8) +
-  facet_wrap(~treatment) +
-  geom_point(aes(y = meta), alpha = 0.5, 
-    position = position_jitter(height = 0.05)) +
-  ylab("Probability of metamorphosis")
-
 ggplot(new_data, aes(day, prediction4, group = tank, color = treatment)) +
   geom_line(alpha = 0.8) +
   facet_wrap(~species_true) +
-  geom_point(aes(y = meta), alpha = 0.5, 
+  geom_point(aes(y = meta), alpha = 0.3, 
     position = position_jitter(height = 0.05)) +
   ylab("Probability of metamorphosis")
 ```
+
+How can we derive estimates at any given factor levels? What does the slope
+estimate for `week_centered` represent? What is the slope estimate for
+`week_centered` for species `b`? How can we get a quick estimate of the rate of
+change of proportion metamorphosed per week at the steepest point on the curve?
+(Hint: remember the divide by 4 rule.)
 
 ```{r}
 comparison_effect <- function(model, base_par, comparison_par) {
   if (class(model) == "glmmTMB") {
     fe <- fixef(model)$cond
-    se <- coef(summary(model))$cond[,"Std. Error"]
   } else {
-    se <- arm::se.fixef(model)
     fe <- fixef(model)
   }
   if (base_par != comparison_par) {
     fe_comp <- fe[[comparison_par]] + fe[[base_par]]
-    se_comp <- sqrt(se[[comparison_par]]^2 - se[[base_par]]^2)
   } else {
     fe_comp <- fe[[base_par]]
-    se_comp <- se[[base_par]]
   }
-  ci <- fe_comp + c(-1.96, 1.96) * se_comp
-  data.frame(lwr = ci[1], est = fe_comp, upr = ci[2])
+  fe_comp
 }
 
 coef(summary(m4))
@@ -229,13 +296,15 @@ comparison_effect(m4, "week_centered", "week_centered:speciesb")/4
 comparison_effect(m4, "week_centered", "week_centered:speciesc")/4
 ```
 
+Let's look at the binned residuals from this more complicated model:
+
 ```{r}
 aug <- d
 aug$.resid <- residuals(m4)
 aug$.fitted <- fitted(m4)
 aug <- aug %>% mutate(week_binned = findInterval(week_centered, 
       seq(min(week_centered), max(week_centered), length.out = 25)))
-binned4 <- group_by(aug, species, week_centered) %>%
+binned4 <- group_by(aug, species, week_centered, tank) %>%
   summarise(mean_week_centered = mean(week_centered), mean_residual = mean(.resid),
     mean_fitted = mean(.fitted))
 
@@ -245,4 +314,12 @@ ggplot(binned4, aes(mean_fitted, mean_residual, colour = species)) +
   geom_smooth(se = FALSE, method = "loess", colour = "black")
 ```
 
-Better.
+This looks substantially better, although not perfect. It's possible that
+a different link function would fit the data better although none of the
+obvious alternatives looked much better to me. For example:
+
+```{r, eval=FALSE}
+m5 <- glmmTMB(meta ~ (week_centered + species + warming + drying)^2 + 
+  (1 + week_centered | tank), 
+  family = binomial(link = "probit"), data = d)
+```
